GNOME Bugzilla – Bug 774747
qtdemux: compiler warning with gcc 6.2
Last modified: 2016-11-21 07:33:42 UTC
Created attachment 340353 [details] [review] Just initialize size with 0. With git master there is a compile error with gcc 6.2 Build in cross bitbake enviroment for mipsel32el stb's Pli5 Host pc ubuntu 16.04 x86_64 target mipsel32el vuduo2 stb. Compiler gcc/g++ 6.2. ERROR: | ../../../git/gst/isomp4/qtdemux.c: In function 'qtdemux_parse_tree': | ../../../git/gst/isomp4/qtdemux.c:10224:24: error: 'size' may be used uninitialized in this function [-Werror=maybe-uninitialized] | offset += size; | ^~ | ../../../git/gst/isomp4/qtdemux.c:10197:25: note: 'size' was declared here | guint32 size, tag; | ^~~~ It can be easely solved with patch I included here.
commit fc3022da1cb4389b40a978911d9b7faf74c6cdeb Author: christophecvr <stefansat@telenet.be> Date: Sun Nov 20 14:12:16 2016 +0100 qtdemux: Fix wrong compiler warning with gcc 6.2 | ../../../git/gst/isomp4/qtdemux.c: In function 'qtdemux_parse_tree': | ../../../git/gst/isomp4/qtdemux.c:10224:24: error: 'size' may be used uninitialized in this function [-Werror=maybe-uninitialized] | offset += size; | ^~ | ../../../git/gst/isomp4/qtdemux.c:10197:25: note: 'size' was declared here | guint32 size, tag; | ^~~~ https://bugzilla.gnome.org/show_bug.cgi?id=774747